Add nesting styles

--- a/css/style.css
+++ b/css/style.css
@@ -13,4 +13,25 @@
   margin: 15px 0;
 }
 
+.btn {
+  text-decoration: underline;
+  text-transform: lowercase;
+}
+
+a {
+  color: #999;
+}
+
+a.action {
+  border-color: green;
+}
+
+a:hover {
+  color: #777;
+}
+
+a:active {
+  color: #888;
+}
+
 /*# sourceMappingURL=style.css.map */
