--- a/css/style.scss
+++ b/css/style.scss
@@ -1,12 +1,28 @@
 .wrap {
-    height: 100%;
     margin: auto;
-    width: 100%;
+    width: 1180px;
     overflow: hidden;
 }
 
 #slides {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    width: 999999px;
+}
+
+#slides > div {
+    height: 600px;
+    width: 1180px;
+    float: left;
+    margin-right: 200px;
+    text-align: center;
+ 
+    /* Flexible Box Model */
+    display: -webkit-box;
+    -webkit-box-align: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-pack: center;
+
+    display: box;
+    box-align: center;
+    box-orient: horizontal;
+    box-pack: center;
 }
