--- a/css/style.scss
+++ b/css/style.scss
@@ -1,6 +1,6 @@
 .wrap {
     margin: auto;
-    width: 1180px;
+    width: 100%;
     overflow: hidden;
 }
 
@@ -14,7 +14,7 @@
     float: left;
     margin-right: 200px;
     text-align: center;
- 
+
     /* Flexible Box Model */
     display: -webkit-box;
     -webkit-box-align: center;
