--- a/css/style.scss
+++ b/css/style.scss
@@ -10,7 +10,7 @@
 
 #slides > div {
     height: 600px;
-    width: 1180px;
+    width: 100%;
     float: left;
     margin-right: 200px;
     text-align: center;
