Adjust width of wrap and slide divs

--- a/css/style.scss
+++ b/css/style.scss
@@ -1,6 +1,6 @@
 .wrap {
     margin: auto;
-    width: 100%;
+    width: 1200px;
     overflow: hidden;
 }
 
@@ -10,7 +10,7 @@
 
 #slides > div {
     height: 600px;
-    width: 100%;
+    width: 1200px;
     float: left;
     margin-right: 200px;
     text-align: center;
