--- a/css/style.scss
+++ b/css/style.scss
@@ -9,26 +9,9 @@ html, body {
 }
 
 #slides {
-    width: 999999px;
-}
-
-#slides > div {
-    height: 100%;
-    width: 100%;
-    float: left;
-    margin-right: 200px;
-    text-align: center;
-
-    /* Flexible Box Model */
-    display: -webkit-box;
-    -webkit-box-align: center;
-    -webkit-box-orient: horizontal;
-    -webkit-box-pack: center;
-
-    display: box;
-    box-align: center;
-    box-orient: horizontal;
-    box-pack: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #slide-0 {
