--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,10 @@ html, body {
 }
 
 #slides {
+  width: 999999px;
+}
+
+#slides > div {
   display: flex;
   justify-content: center;
   align-items: center;
