--- a/css/style.css
+++ b/css/style.css
@@ -12,12 +12,12 @@ html, body {
   width: 999999px;
 }
 
-#slides > div {
+#slide-0 {
+  background-color: #E91E63;
   position: relative;
 }
 
-#slide-0 {
-  background-color: #E91E63;
+#zero {
   position: absolute;
   top: 50%;
   left: 50%;
