--- a/css/style.scss
+++ b/css/style.scss
@@ -12,14 +12,25 @@ html, body {
     width: 999999px;
 }
 
-#slide-0 {
-    background-color: #E91E63;
-    position: relative;
+#slides > div {
+    height: 100%;
+    width: 100%;
+    float: left;
+    margin-right: 200px;
+    text-align: center;
+
+    /* Flexible Box Model */
+    display: -webkit-box;
+    -webkit-box-align: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-pack: center;
+
+    display: box;
+    box-align: center;
+    box-orient: horizontal;
+    box-pack: center;
 }
 
-#zero {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+#slide-0 {
+    background-color: #E91E63;
 }
