--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,6 @@
-html, body {
-  height: 100%;
-}
-
 .wrap {
-  height: 100%;
-  width: 100%;
+  margin: auto;
+  width: 1200px;
   overflow: hidden;
 }
 
@@ -13,8 +9,8 @@ html, body {
 }
 
 #slides > div {
-  height: 100%;
-  width: 100%;
+  height: 600px;
+  width: 1200px;
   float: left;
   margin-right: 200px;
   text-align: center;
@@ -29,7 +25,7 @@ html, body {
   box-pack: center;
 }
 
-#slide-0 {
+#zero {
   background-color: #E91E63;
 }
 
