--- a/css/style.css
+++ b/css/style.css
@@ -19,10 +19,9 @@
   -webkit-box-align: center;
   -webkit-box-orient: horizontal;
   -webkit-box-pack: center;
-  display: box;
-  box-align: center;
-  box-orient: horizontal;
-  box-pack: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #slide-0 {
