--- a/css/style.scss
+++ b/css/style.scss
@@ -1,3 +1,15 @@
+html,
+body,
+.wrap,
+#slides,
+#slides > div {
+    height: 100%;
+}
+
+body {
+    background-color: #C6538C;
+}
+
 .wrap {
     margin: auto;
     width: 1200px;
@@ -9,7 +21,6 @@
 }
 
 #slides > div {
-    height: 600px;
     width: 1200px;
     float: left;
     margin-right: 200px;
@@ -23,8 +34,4 @@
     display: flex;
     justify-content: center;
     align-items: center;
-}
-
-#slide-0 {
-    background-color: #E91E63;
 }
