Add height and width to inner div

--- a/css/style.scss
+++ b/css/style.scss
@@ -6,10 +6,6 @@ body,
     height: 100%;
 }
 
-body {
-    background-color: #C6538C;
-}
-
 .wrap {
     margin: auto;
     width: 1200px;
@@ -30,4 +26,10 @@ body {
     -webkit-box-align: center;
     -webkit-box-orient: horizontal;
     -webkit-box-pack: center;
+}
+
+#zero {
+    background-color: #C6538C;
+    height: 100%;
+    width: 100%;
 }
