--- a/css/style.css
+++ b/css/style.css
@@ -6,10 +6,6 @@ body,
   height: 100%;
 }
 
-body {
-  background-color: #C6538C;
-}
-
 .wrap {
   margin: auto;
   width: 1200px;
@@ -29,6 +25,12 @@ body {
   -webkit-box-align: center;
   -webkit-box-orient: horizontal;
   -webkit-box-pack: center;
+}
+
+#zero {
+  background-color: #C6538C;
+  height: 100%;
+  width: 100%;
 }
 
 /*# sourceMappingURL=style.css.map */
