--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,9 @@ body,
   background-color: #C6538C;
   height: 100%;
   width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /*# sourceMappingURL=style.css.map */
