--- a/css/style.scss
+++ b/css/style.scss
@@ -32,4 +32,8 @@ body,
     background-color: #C6538C;
     height: 100%;
     width: 100%;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
