--- a/css/style.css
+++ b/css/style.css
@@ -28,12 +28,15 @@ body,
 }
 
 #zero {
-  background-color: #C6538C;
   height: 100%;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+#zero {
+  background-color: #E91E63;
 }
 
 /*# sourceMappingURL=style.css.map */
