--- a/css/style.scss
+++ b/css/style.scss
@@ -29,11 +29,13 @@ body,
 }
 
 #zero {
-    background-color: #C6538C;
     height: 100%;
     width: 100%;
-
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+#zero {
+    background-color: #E91E63;
 }
