--- a/css/style.scss
+++ b/css/style.scss
@@ -6,6 +6,10 @@ body,
     height: 100%;
 }
 
+body {
+    color: white;
+}
+
 .wrap {
     margin: auto;
     width: 1200px;
@@ -28,7 +32,7 @@ body,
     -webkit-box-pack: center;
 }
 
-#zero {
+.container {
     height: 100%;
     width: 100%;
     display: flex;
@@ -36,6 +40,39 @@ body,
     align-items: center;
 }
 
-#zero {
-    background-color: #E91E63;
+#zero,
+#one,
+#twentyone {
+    background-color: #C6538C;
+}
+
+#two,
+#three,
+#four,
+#five,
+#six {
+    background-color: #9C27B0;
+}
+
+#seven,
+#eight,
+#nine {
+    background-color: #673AB7;
+}
+
+#ten,
+#eleven,
+#twelve,
+#thirteen,
+#fourteen {
+    background-color: #3F51B5;
+}
+
+#fifteen,
+#sixteen,
+#seventeen,
+#eighteen,
+#nineteen,
+#twenty {
+    background-color: #2196F3;
 }
