Add px width to inner div

--- a/css/style.scss
+++ b/css/style.scss
@@ -40,6 +40,10 @@ body {
     align-items: center;
 }
 
+#zero, #one, #two, #three, #four, #five, #six, #seven, #eight, #nine, #ten, #eleven, #twelve, #thirteen, #fourteen, #fifteen, #sixteen, #seventeen, #eighteen, #nineteen, #twenty, #twentyone {
+    width: 600px;
+}
+
 #zero,
 #one,
 #twentyone {
