--- a/css/style.scss
+++ b/css/style.scss
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600,700);
+
 html,
 body,
 .wrap,
@@ -8,6 +10,32 @@ body,
 
 body {
     color: white;
+    font-family: 'Open Sans', sans-serif;
+    line-height: 1.6;
+}
+
+h1,
+h2 {
+    text-transform: uppercase;
+}
+
+h1 {
+    font-size: 3rem;
+    font-weight: 700;
+}
+
+h2 {
+    font-weight: 600;
+}
+
+p {
+    font-size: 1.5rem;
+    font-weight: 400;
+    text-transform: lowercase;
+}
+
+pre {
+    font-family: 'Monaco', monospace;
 }
 
 .wrap {
