--- a/css/style.scss
+++ b/css/style.scss
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600,700);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600);
 
 html,
 body,
@@ -15,17 +15,17 @@ body {
 
 h1,
 h2 {
+    font-weight: 600;
+    margin-bottom: 1rem;
     text-transform: uppercase;
 }
 
 h1 {
     font-size: 3rem;
-    font-weight: 700;
 }
 
 h2 {
-    font-weight: 600;
-    margin-top: 1rem;
+    color: transparentize(white, 20%);
 }
 
 p {
