--- a/css/style.scss
+++ b/css/style.scss
@@ -38,6 +38,16 @@ pre {
     font-family: 'Monaco', monospace;
 }
 
+ul,
+ol {
+    font-size: 1.5rem;
+    line-height: 1.6;
+}
+
+ul {
+    list-style-type: disc;
+}
+
 .wrap {
     margin: auto;
     width: 1200px;
