--- a/css/style.scss
+++ b/css/style.scss
@@ -38,12 +38,14 @@ p {
 
 pre {
     font-family: 'Monaco', monospace;
-    font-size: 2rem;
+    font-size: 1.5rem;
 }
 
 ul,
 ol {
     font-size: 2rem;
+    font-weight: 300;
+    text-indent: 1rem;
 }
 
 ul {
