--- a/css/style.scss
+++ b/css/style.scss
@@ -46,7 +46,11 @@ ol {
     font-size: 2rem;
     font-weight: 300;
     margin-left: 2rem;
-    text-transform: lowercase;
+
+    li {
+        text-transform: lowercase;
+    }
+    
 }
 
 ul {
