--- a/css/style.css
+++ b/css/style.css
@@ -1,69 +1,53 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:300,400);
-html,
-body,
-.wrap,
-#slides,
-#slides > div {
-  height: 100%;
-}
+html, body, .wrap, #slides, #slides > div {
+  height: 100%; }
 
 body {
   color: white;
   font-family: 'Open Sans', sans-serif;
-  line-height: 1.6;
-}
+  line-height: 1.6; }
 
-h1,
-h2 {
+h1, h2 {
   font-weight: 400;
   margin-bottom: 2rem;
-  text-transform: uppercase;
-}
+  text-transform: uppercase; }
 
 h1 {
   font-size: 3rem;
-  line-height: 1.2;
-}
+  line-height: 1.2; }
 
 h2 {
-  color: rgba(255, 255, 255, 0.7);
-}
+  color: rgba(255, 255, 255, 0.7); }
 
 p {
   font-size: 2rem;
   font-weight: 300;
-  text-transform: lowercase;
-}
+  text-transform: lowercase; }
 
 pre {
   font-family: 'Monaco', monospace;
-  font-size: 1.5rem;
-}
+  font-size: 1.5rem; }
 
-ul,
-ol {
+ul, ol {
   font-size: 2rem;
   font-weight: 300;
-  margin-left: 2rem;
-}
+  margin-left: 2rem; }
+ul li, ol li {
+  text-transform: lowercase; }
 
 ul {
-  list-style-type: disc;
-}
+  list-style-type: disc; }
 
 ol {
-  list-style-type: decimal;
-}
+  list-style-type: decimal; }
 
 .wrap {
   margin: auto;
   width: 1920px;
-  overflow: hidden;
-}
+  overflow: hidden; }
 
 #slides {
-  width: 999999px;
-}
+  width: 999999px; }
 
 #slides > div {
   width: 1920px;
@@ -73,56 +57,31 @@ ol {
   display: -webkit-box;
   -webkit-box-align: center;
   -webkit-box-orient: horizontal;
-  -webkit-box-pack: center;
-}
+  -webkit-box-pack: center; }
 
 .container {
   height: 100%;
   width: 100%;
   display: flex;
   justify-content: center;
-  align-items: center;
-}
+  align-items: center; }
 
 #zero > div, #one > div, #two > div, #three > div, #four > div, #five > div, #six > div, #seven > div, #eight > div, #nine > div, #ten > div, #eleven > div, #twelve > div, #thirteen > div, #fourteen > div, #fifteen > div, #sixteen > div, #seventeen > div, #eighteen > div, #nineteen > div, #twenty > div, #twentyone > div {
-  width: 600px;
-}
+  width: 600px; }
 
-#zero,
-#one,
-#twentyone {
-  background-color: #E91E63;
-}
+#zero, #one, #twentyone, #twentytwo {
+  background-color: #E91E63; }
 
-#two,
-#three,
-#four,
-#five,
-#six {
-  background-color: #9C27B0;
-}
+#two, #three, #four, #five, #six {
+  background-color: #9C27B0; }
 
-#seven,
-#eight,
-#nine {
-  background-color: #673AB7;
-}
+#seven, #eight, #nine {
+  background-color: #673AB7; }
 
-#ten,
-#eleven,
-#twelve,
-#thirteen,
-#fourteen {
-  background-color: #3F51B5;
-}
+#ten, #eleven, #twelve, #thirteen, #fourteen {
+  background-color: #3F51B5; }
 
-#fifteen,
-#sixteen,
-#seventeen,
-#eighteen,
-#nineteen,
-#twenty {
-  background-color: #2196F3;
-}
+#fifteen, #sixteen, #seventeen, #eighteen, #nineteen, #twenty {
+  background-color: #2196F3; }
 
 /*# sourceMappingURL=style.css.map */
