Apply background color

--- a/css/style.scss
+++ b/css/style.scss
@@ -50,7 +50,7 @@ ol {
     li {
         text-transform: lowercase;
     }
-    
+
 }
 
 ul {
@@ -91,7 +91,7 @@ ol {
     align-items: center;
 }
 
-#zero > div, #one > div, #two > div, #three > div, #four > div, #five > div, #six > div, #seven > div, #eight > div, #nine > div, #ten > div, #eleven > div, #twelve > div, #thirteen > div, #fourteen > div, #fifteen > div, #sixteen > div, #seventeen > div, #eighteen > div, #nineteen > div, #twenty > div, #twentyone > div {
+#zero > div, #one > div, #two > div, #three > div, #four > div, #five > div, #six > div, #seven > div, #eight > div, #nine > div, #ten > div, #eleven > div, #twelve > div, #thirteen > div, #fourteen > div, #fifteen > div, #sixteen > div, #seventeen > div, #eighteen > div, #nineteen > div, #twenty > div, #twentyone > div, #twentytwo > div {
     width: 600px;
 }
 
