--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ ol {
   justify-content: center;
   align-items: center; }
 
-#zero > div, #one > div, #two > div, #three > div, #four > div, #five > div, #six > div, #seven > div, #eight > div, #nine > div, #ten > div, #eleven > div, #twelve > div, #thirteen > div, #fourteen > div, #fifteen > div, #sixteen > div, #seventeen > div, #eighteen > div, #nineteen > div, #twenty > div, #twentyone > div {
+#zero > div, #one > div, #two > div, #three > div, #four > div, #five > div, #six > div, #seven > div, #eight > div, #nine > div, #ten > div, #eleven > div, #twelve > div, #thirteen > div, #fourteen > div, #fifteen > div, #sixteen > div, #seventeen > div, #eighteen > div, #nineteen > div, #twenty > div, #twentyone > div, #twentytwo > div {
   width: 600px; }
 
 #zero, #one, #twentyone, #twentytwo {
