Change background for slide 21

--- a/css/style.scss
+++ b/css/style.scss
@@ -97,7 +97,6 @@ ol {
 
 #zero,
 #one,
-#twentyone,
 #twentytwo {
     background-color: #E91E63;
 }
@@ -129,6 +128,7 @@ ol {
 #seventeen,
 #eighteen,
 #nineteen,
-#twenty {
+#twenty,
+#twentyone {
     background-color: #2196F3;
 }
